Increased Nav Text Size, Fixed dark mode Button

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -9,7 +9,8 @@ body{
   border: none;
 }
 .dark-mode-img{
-  height: 20px;
+  height: 30px;
+  margin-bottom: 10px;
 }
 
 .welcome{
